--- a/rentACar/src/main/resources/templates/fancy-login.html
+++ b/rentACar/src/main/resources/templates/fancy-login.html
@@ -35,6 +35,14 @@
 
                                             </div>
                                            
+                                           <!-- Check for logout  -->
+                                            <div th:if="${param.logout}">
+
+                                                <div class="alert alert-success col-xs-offset-1 col-xs-10">
+                                                    You have been logged out.
+                                                </div>
+
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
