Homepage ui and HomepageController added

--- a/rentACar/src/main/resources/templates/fancy-login.html
+++ b/rentACar/src/main/resources/templates/fancy-login.html
@@ -60,11 +60,17 @@
                                 <!-- Login/Submit Button -->
                                 <div style="margin-top: 10px;" class="form-group">
                                     <div class="col-sm-6 controls">
+                                        
                                         <button type="submit" class="btn btn-success">Login</button>
                                     </div>
                                 </div>
 
                             </form>
+                            
+                            <form>
+                                   <a th:href="@{/}" >Go to Homepage</a>    
+			
+							</form>
                             
                         </div>
                     </div>
