--- a/rentACar/src/main/resources/templates/list-brands.html
+++ b/rentACar/src/main/resources/templates/list-brands.html
@@ -62,6 +62,13 @@
 
 	</form>
 	
+	<form action="#" th:action="@{/}" method="POST">
+		<div style="margin-top: 10px;" class="form-group">
+        	<div class="col-sm-6 controls"> 
+            	<a th:href="@{/}" class="btn btn-primary" >Back to the Homepage</a>
+            </div>
+        </div>
+	
 </div>
 	
 </body>
