Users infos added in DB

--- a/rentACar/src/main/resources/templates/fancy-login.html
+++ b/rentACar/src/main/resources/templates/fancy-login.html
@@ -61,7 +61,7 @@
                                 <div style="margin-top: 10px;" class="form-group">
                                     <div class="col-sm-6 controls">
                                         
-                                        <button type="submit" class="btn btn-success">Login</button>
+                                        <button type="submit" class="btn btn-success">Giriş Yap</button>
                                     </div>
                                 </div>
 
@@ -70,7 +70,7 @@
                             <form action="#" th:action="@{/}" method="POST">
 								<div style="margin-top: 10px;" class="form-group">
                                     <div class="col-sm-6 controls"> 
-                                        <a th:href="@{/}" class="btn btn-primary" >Back to the Homepage</a>
+                                        <a th:href="@{/}" class="btn btn-primary" >Ana Sayfa</a>
                                     </div>
                                 </div>
                                    <!-- <a th:href="@{/}" >Back to the Homepage</a> -->    
